# spikeq

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  demo.cast
examples/: 459cac6f-8d65-48ed-99aa-f03930b3c02f.fastq  4b1f92dc-14e1-496f-a68b-d1683251d827.fastq  inserted.json  schema.json
spikeq/: 0c484c4d-20ab-44e6-9504-4568708c538d.txt  3c11b76f-9d1e-4a8b-be28-17efe74189e7.txt  Cargo.toml  inserted.json
spikeq/examples/: 7ef2aa7c-0625-491f-967a-f6cda1a9518c  inserted.json  regex.json  regex.txt  regex2.json  schema.json
spikeq/src/: arg.rs  main.rs  read_regex.rs
src/: arg.rs  iupac.rs  main.rs  read_regex.rs
