[package]
name = "spikeq"
version = "1.0.0"
edition = "2021"
authors = ["Nicholas D. Crosbie"]
license = "MIT"
description = "A synthetic FASTQ record generator with pattern spiking"
homepage = "https://github.com/Rbfinch/spikeq"
documentation = "https://github.com/Rbfinch/spikeq"
repository = "https://github.com/Rbfinch/spikeq"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "FASTQ", "JSON", "regex", "spike"]

[dependencies]
seq_io = "0.3.2"
regex = "1.11.1"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
jsonschema = "0.26.1"
serde_json = "1.0.133"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
lto = true
